<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_40"
                android:layout_marginLeft="@dimen/_40"
                android:layout_marginTop="@dimen/_50"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_20"
                    android:textSize="@dimen/_14"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:text="@string/signin_page_header"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_20"
                    android:textSize="@dimen/_14"
                    android:visibility="visible"
                    android:text="@string/signin_page_subHeader"/>

                <Spinner
                    android:id="@+id/spinnerSelectCountry"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
                    android:background="@drawable/spinnerlayer"
                    android:paddingLeft="@dimen/_10"
                    android:prompt="@string/otp_spinner_country"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/splashImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/for_splash" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edtZipCodeLogin"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40"
                        android:layout_weight="30"
                        android:layout_marginBottom="@dimen/_08"
                        android:background="@drawable/edittextlayer"
                        android:clickable="false"
                        android:ellipsize="start"
                        android:gravity="center|left"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_10"
                        android:singleLine="true"
                        android:hint="+000"
                        android:textColorHint="@color/colorHeighLight"
                        android:textSize="@dimen/_20"
                        tools:ignore="EllipsizeMaxLines" />

                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />




                    <EditText
                        android:id="@+id/etRegPhoneNo"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40"
                        android:layout_weight="70"
                        android:layout_marginBottom="@dimen/_04"
                        android:hint="@string/username_hit"
                        android:background="@drawable/edittextlayer"
                        android:ellipsize="end"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_10"
                        android:singleLine="true"
                        android:textColorHint="@color/colorHeighLight" />

                </LinearLayout>

                <EditText
                    android:layout_marginTop="@dimen/_20"
                    android:layout_marginRight="@dimen/_10"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/_10"
                    android:paddingLeft="@dimen/_10"
                    android:hint="@string/username_hit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
                    android:background="@drawable/edittextlayer"
                    />

                <EditText
                    android:id="@+id/etPswd"
                    android:layout_marginTop="@dimen/_10"
                    android:paddingLeft="@dimen/_10"
                    android:layout_marginBottom="@dimen/_04"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
                    android:background="@drawable/edittextlayer"
                    />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginRight="@dimen/_10"
                    android:layout_marginLeft="@dimen/_10"
                    android:layout_marginTop="@dimen/_40"
                    android:layout_width="match_parent"
                    android:background="@drawable/buttonstateslayer2_with_border"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:layout_height="40dp" />


                <FrameLayout
                    android:id="@+id/flGoogleSignBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/_10"
                    android:layout_marginLeft="@dimen/_10"
                    android:layout_marginTop="@dimen/_10"
                    android:clickable="true"
                    android:background="@android:color/white">
                    <!--Google Login layout -->
                    <LinearLayout
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@android:color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageview_google_icon"
                            android:layout_width="@dimen/_40"
                            android:layout_height="@dimen/_30"
                            android:layout_gravity="start"
                            android:contentDescription="@string/app_name"
                            android:background="@android:color/white"
                            android:src="@drawable/google_icon" />

                        <TextView
                            android:id="@+id/textview_sign_in_button"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30"
                            android:paddingRight="@dimen/_15"
                            android:background="@android:color/white"
                            android:textSize="@dimen/_12"
                            android:text="@string/google_sign_text"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:textAllCaps="false" />



                    </LinearLayout>
                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/_10"
                    android:layout_marginLeft="@dimen/_10"
                    android:layout_marginTop="@dimen/_10">

                    <TextView
                        android:id="@+id/tvSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:text="Sign Up"/>

                    <TextView
                        android:id="@+id/tvSkip"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:textColor="@color/red"
                        android:text="Skip"/>



                </FrameLayout>



            </LinearLayout>

    <FrameLayout
        android:id="@+id/flLoadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/_24"
            android:layout_height="@dimen/_24"
            android:layout_gravity="center"
            android:src="@drawable/gallery_gif_loader"/>

    </FrameLayout>



</FrameLayout>